# folder-tree-tool

./: README.md  pyproject.toml
src/folder_tree/: main.py
src/folder_tree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
