[project]
name = "folder-tree"
version = "1.0.0"
description = "A CLI tool to generate a tree-like folder structure (Markdown + console output)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Abhishek Hegde" }
]

dependencies = []

[project.scripts]
folder-tree = "folder_tree.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
